--- a/JavaScript/3-1/style.css
+++ b/JavaScript/3-1/style.css
@@ -51,12 +51,15 @@ table {
     background-color: black;
     position: absolute;
     left: 0;
-    transition: all 2s ease;
+    transition: all 2s ease; /* 実行の速度 */
 }
+
+/* クリックされると適用 */
 .left.action{
     width: 0;
     transition: all 2s ease;
 }
+
 .right{
     width: 50%;
     height: 100vh;
@@ -65,6 +68,8 @@ table {
     right: 0;
     transition: all 2s ease;
 }
+
+/* クリックされたら適用 */
 .right.action{
     width: 0;
     transition: all 2s ease;
